express/code/blocks/template-x/template-x.css
/* ... */
.template-x.template-x-complete .template-x-inner-wrapper {
  min-height: unset;
}

.template-x-horizontal-fullwidth-collaboration-container .content h2,
.template-x-horizontal-fullwidth-collaboration-container .content h3,
.template-x-horizontal-fullwidth-collaboration-container .content p {
  text-align: left;
  padding: 0 28px;
  margin: 12px 0;
}

.template-x-horizontal-fullwidth-collaboration-container .content p {
  font-size: var(--body-font-size-m);
  line-height: 24px;
}

.template-x.horizontal .template-tabs {
  margin-top: 24px;
  display: flex;
  overflow: auto;
  max-width: 100%;
}

.template-x.horizontal .template-tabs button.template-tab-button {
  background: none;
  border: none;
  padding: 8px 4px 6px 4px;
  margin: 0 16px;
  font-family: var(--body-font-family);
  cursor: pointer;
  font-size: var(--body-font-size-s);
  border-bottom: 2px solid transparent;
  white-space: nowrap;
}

main .template-x.sixcols:not(.print) .masonry-col, main .template-x.fullwidth:not(.print) .masonry-col {
  max-width: 175px;
}

.template-x.sixcols:not(.horizontal) {
  max-width: 375px;
}

.template-x.horizontal .template-tabs button.template-tab-button:first-of-type {
  margin-left: 0;
}

.template-x.horizontal .template-tabs button.template-tab-button.active,
.template-x.horizontal .template-tabs button.template-tab-button:hover {
  border-bottom: 2px solid var(--color-black);
}

.template-x.horizontal .template-tabs button.template-tab-button.active {
  font-weight: 700;
}

.template-x .template-title.horizontal .text-wrapper * {
  text-align: left;
}

.template-x .template-title.horizontal .text-wrapper p {
  margin-bottom: 0;
}

.template-x.tabbed .template-title.horizontal .text-wrapper > div {
  width: 100%;
}

.template-x-inner-wrapper {
  display: flex;
  justify-content: center;
  margin: 20px auto 0 auto;
  font-size: var(--body-font-size-m);
  font-weight: var(--body-font-weight);
  text-align: left;
}

.template-x.sixcols .template-x-inner-wrapper,
.template-x.fullwidth .template-x-inner-wrapper {
  flex-direction: row;
  justify-content: center;
}

.template-x.horizontal .template-x-inner-wrapper {
  margin-top: 0;
  transition: opacity 0.2s;
}

.template-x.fullwidth.holiday .template-x-inner-wrapper {
  max-height: 0;
  transition: max-height 0.5s, padding-top 0.5s;
  overflow: hidden;
  margin-right: 56px;
  margin-left: 56px;
}

.template-x.fullwidth.holiday {
  position: absolute;
}

.template-x.fullwidth.holiday ~ div {
  padding-top: 54px;
}

.template-x.fullwidth.holiday.expanded .template-x-inner-wrapper {
  max-height: 300px;
  margin-left: 56px;
  margin-right: 56px;
}

.template-x.fullwidth.holiday.animated video {
  position: absolute;
  top: 0;
  left: 0;
  object-fit: cover;
  height: 100%;
  width: 100vw;
  z-index: -1;
  pointer-events: none;
  transition: opacity 0.2s;
}

.template-x.fullwidth.holiday.expanded.animated video {
  transition: opacity 1s;
  padding: 0;
}

.template-x.fullwidth.sm-view .template-x-inner-wrapper,
.template-x.fullwidth.md-view .template-x-inner-wrapper,
.template-x.fullwidth.lg-view .template-x-inner-wrapper {
  padding: 0;
}

.template-x.with-categories-list .template-x-inner-wrapper {
  min-height: 700px;
}

.template-x[class*="lg-view"] > .template-x-inner-wrapper > .masonry-col {
  max-width: 335px;
  text-align: center;
}

.template-x[class*="md-view"] > .template-x-inner-wrapper > .masonry-col {
  max-width: 260px;
  text-align: center;
}

.template-x[class*="sm-view"] > .template-x-inner-wrapper > .masonry-col {
  max-width: 170px;
  text-align: center;
}

.template-x .template-title {
  margin: 0 12px 20px 12px;
}

.template-x .template-title.with-link > div {
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
  align-items: flex-start;
}

.template-x .template-title.horizontal > div > * {
  text-align: left;
  margin: 0;
}

.template-x .template-title.horizontal h2 {
  font-size: var(--heading-font-size-m);
}

#templates-heading {
  margin-top: 80px;
}

.template-x .template-title.horizontal.holiday .template-title,
.template-x .template-title.horizontal.holiday picture,
.template-x .template-title.horizontal.holiday a,
.template-x .template-title.horizontal.holiday h4,
.template-x .template-title.horizontal.holiday p {
  z-index: 1;
}

.template-x .template-title.horizontal p {
  margin-top: 8px;
  width: fit-content;
  font-size: var(--body-font-size-m);
}

.template-x.horizontal.mini .template-title.horizontal p {
  margin-bottom: 0;
}

.template-x .template-link,
.template-x .template-title-link {
  text-decoration: none;
  padding-left: 16px;
  padding-top: 6px;
  display: flex;
}

.template-x .template-link:hover,
.template-x .template-title-link:hover {
  color: var(--palette-indigo-1000)
}

.template-x .toggle-button {
  display: flex;
}

.holiday.template-x .toggle-button-chev {
  display: flex;
  width: 6px;
  height: 6px;
  border-top-width: 0;
  border-left-width: 0;
  border-bottom-width: 2px;
  border-right-width: 2px;
  border-style: solid;
  border-color: var(--color-info-accent);
  transform-origin: 75% 75%;
  transform: rotate( -45deg );
  content: "";
  margin: none;
  transition: transform 0.2s;
}

.template-x.horizontal.holiday.expanded .toggle-button .toggle-button-chev {
  transform: rotate(-135deg);
}

.template-x .template-title-link {
  padding: 0;
  white-space: nowrap;
}

.template-x .template p {
  margin: 0;
}

.template-x .template {
  display: flex;
  flex-direction: column;
  width: 240px;
  margin: 0 0 32px 0;
  justify-content: flex-end;
  -webkit-column-break-inside: avoid;
  page-break-inside: avoid;
  break-inside: avoid;
  text-decoration: unset;
  position: relative;
  border-radius: 14px;
}

.template-x .template:focus {
  outline: none;
  box-shadow: 0 0 0 2px var(--color-white), 0 0 0 4px var(--color-info-accent);
}


.template-x .template > div:first-child > a:any-link {
  padding-left: 0;
}
/* ... */

